added chinese and spanish
added chinese and spanish

--- a/maincontents.htm
+++ b/maincontents.htm
@@ -57,19 +57,19 @@
                 <td>
                     <button onclick="FC_ContentsCall('Service')" class="r0c0">
                         <img src="assets/icons/service.png" width="200" style="width: 200px;"><br>
-                        <a id="txt_eat">Service Center</a>
+                        <a id="txt_service">Service Center</a>
                     </button>
                 </td>
                 <td>
                     <button onclick="FC_ContentsCall('Maps')" class="r0c1">
                     <img src="assets/icons/maps.png"><br>
-                        <a id="txt_shopping">Maps</a>
+                        <a id="txt_maps">Maps</a>
                     </button>
                 </td>
                 <td>
                     <button onclick="FC_ContentsCall('Info')" class="r0c1">
                     <img src="assets/icons/info.png"><br>
-                        <a id="txt_shopping">Info</a>
+                        <a id="txt_info">Info</a>
                     </button>
                 </td>
             </tr>
@@ -77,19 +77,19 @@
                 <td>
                     <button onclick="FC_ContentsCall('Departments')" class="r0c2">
                     <img src="assets/icons/department.png"><br>
-                        <a id="txt_robot_avatar">Departments</a>
+                        <a id="txt_departments">Departments</a>
                     </button>
                 </td>
                 <td>
                     <button onclick="FC_ContentsCall('Employment')" class="r1c0">
                     <img src="assets/icons/employment.png"><br>
-                        <a id="txt_take_selfie">Employment</a>
+                        <a id="txt_employement">Employment</a>
                     </button>
                 </td>
                 <td>
                     <button onclick="FC_ContentsCall('Dog-licensing')" class="r0c1">
                     <img src="assets/icons/dog-licensing.png"><br>
-                        <a id="txt_shopping">Dog licensing</a>
+                        <a id="txt_dog_licensing">Dog licensing</a>
                     </button>
                 </td>
             </tr>
