--- a/maincontents.htm
+++ b/maincontents.htm
@@ -55,7 +55,7 @@
         <table>
             <tr>
                 <td>
-                    <button onclick="FC_ContentsCall('Service')" class="r0c0">
+                    <button onclick="FC_ContentsCall('ServiceCenter')" class="r0c0">
                         <img src="assets/icons/service.png" width="200" style="width: 200px;"><br>
                         <a id="txt_service">Service Center</a>
                     </button>
@@ -87,7 +87,7 @@
                     </button>
                 </td>
                 <td>
-                    <button onclick="FC_ContentsCall('Dog-licensing')" class="r0c1">
+                    <button onclick="FC_ContentsCall('DogLicensing')" class="r0c1">
                     <img src="assets/icons/dog-licensing.png"><br>
                         <a id="txt_dog_licensing">Dog licensing</a>
                     </button>
