--- a/Contents/DogLicensing/index.html
+++ b/Contents/DogLicensing/index.html
@@ -29,8 +29,8 @@
         <img onclick="FC_ContentsCall('Home')" src="../../assets/logo.png">
     </div>
     <span class="col-sm-3 date-time" style="text-align: left; color: #3c3c3c">
-        <div id= 'appcity'>San Antonio, TX</div>
-          <div id="content_air">San Antonio, TX</div>
+        <div id= 'appcity'></div>
+          <div id="content_air"></div>
           <div id="content_date" ></div>
           <span id="condition"></span>
         <div>
