Ottawa 2 app initial upload
Ottawa 2 app initial upload

--- a/maincontents.htm
+++ b/maincontents.htm
@@ -41,35 +41,31 @@
 
 <nav>
 
-    <div class="nav-language">
-        <button onclick="LanguageChange('english');" id="btn_english" class="btn-english">English</button>
-        <button onclick="LanguageChange('spanish');" id="btn_spanish" class="btn-spanish">Español</button>
-        <button onclick="LanguageChange('chinese');" id="btn_chinese" class="btn-spanish">中文</button>
-    </div>
 </nav>
 
 <section class="main-content">
 
     <div class="main-menu-matrix">
       <!--<img src="assets/Fiesta-logo.png" class="fiesta-icon" onclick="FC_ContentsCall('Fiesta')">-->
+      <div class="title" style="margin-bottom: 100px;"><img src="assets/icons/microphone.png" width="60" style="margin-right: 20px;">PRESS TO ASK A QUESTION</div>
         <table>
             <tr>
                 <td>
                     <button onclick="FC_ContentsCall('ServiceCenter')" class="r0c0">
-                        <img src="assets/icons/service.png" width="200" style="width: 200px;"><br>
-                        <a id="txt_service">Service Center</a>
+                        <img src="assets/icons/service.png" width="200" style="width: 289px;"><br>
+                        <a id="txt_service">SERVICE CENTER</a>
                     </button>
                 </td>
                 <td>
                     <button onclick="FC_ContentsCall('Maps')" class="r0c1">
                     <img src="assets/icons/maps.png"><br>
-                        <a id="txt_maps">Maps</a>
+                        <a id="txt_maps">MAP</a>
                     </button>
                 </td>
                 <td>
                     <button onclick="FC_ContentsCall('Info')" class="r0c1">
                     <img src="assets/icons/info.png"><br>
-                        <a id="txt_info">Info</a>
+                        <a id="txt_info">FAQ</a>
                     </button>
                 </td>
             </tr>
@@ -77,19 +73,19 @@
                 <td>
                     <button onclick="FC_ContentsCall('Departments')" class="r0c2">
                     <img src="assets/icons/department.png"><br>
-                        <a id="txt_departments">Departments</a>
+                        <a id="txt_departments">DEPARTMENTS</a>
                     </button>
                 </td>
                 <td>
-                    <button onclick="FC_ContentsCall('Employment')" class="r1c0">
-                    <img src="assets/icons/employment.png"><br>
-                        <a id="txt_employement">Employment</a>
+                    <button onclick="FC_ContentsCall('checkin')" class="r1c0">
+                    <img src="assets/icons/checkin.png"><br>
+                        <a id="txt_employement">CHECK IN</a>
                     </button>
                 </td>
                 <td>
-                    <button onclick="FC_ContentsCall('checkin')" class="r0c1">
-                    <!-- <img src="assets/icons/dog-licensing.png"><br> -->
-                        <a id="txt_check_in">Check - in</a>
+                    <button onclick="FC_ContentsCall('Events')" class="r0c1">
+                      <img src="assets/icons/events.png"><br>
+                        <a id="txt_check_in">EVENTS</a>
                     </button>
                 </td>
             </tr>
@@ -125,7 +121,7 @@
               <p></p>
             </div>
           </div>
-          <div class="item ">
+         <!-- <div class="item ">
             <img class="fixed-height" src="images/slider/2.png" width="460" height="345">
             <div class="carousel-caption">
               <h3></h3>
@@ -139,7 +135,7 @@
               <p></p>
             </div>
           </div>
-          <!--<div class="item ">
+          <div class="item ">
             <img class="fixed-height" src="images/slider/5.png" width="460" height="345">
             <div class="carousel-caption">
               <h3></h3>
