--- a/Contents/Departments/index.html
+++ b/Contents/Departments/index.html
@@ -110,7 +110,7 @@
               <p></p>
             </div>
           </div>
-          <div class="item ">
+          <!--<div class="item ">
             <img class="fixed-height" src="../../images/slider/2.png" width="460" height="345">
             <div class="carousel-caption">
               <h3></h3>
@@ -123,7 +123,7 @@
               <h3></h3>
               <p></p>
             </div>
-          </div>
+          </div>-->
           
        
 
