--- a/Contents/Info/index.html
+++ b/Contents/Info/index.html
@@ -29,15 +29,13 @@
       <img onclick="FC_ContentsCall('Home')" src="../../assets/logo.png">
     </div>
     <span class="col-sm-3 date-time" style="text-align: left; color: #3c3c3c">
-        <div id= 'appcity'>San Antonio, TX</div>
-          <div id="content_air">San Antonio, TX</div>
-          <div id="content_date" ></div>
-          <span id="condition"></span>
-        <div>
-            <img id ="image-zoom" style="width: 50px" src="">
-             <span id="temp" ></span>
-        </div>
-        
+      <div id="content_air"></div>
+      <div id="content_date" ></div>
+      <span id="temp" ></span>
+      <div>
+        <img id ="image-zoom" style="width: 50px" src="">
+        <span id="condition"></span>
+      </div>
     </span>
 </header>
 
@@ -54,7 +52,7 @@
     box-sizing: content-box;">
     <div class="title"><img src="images/microphone.png" width="60" style="margin-right: 20px;">PRESS TO ASK A QUESTION</div>
 
-    <div class="panel-group" id="faqAccordion" style="margin: 0 100px;">
+    <div class="panel-group" id="faqAccordion" style="margin: 0 70px;">
         <div class="panel panel-default ">
             <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
                  <h4 class="panel-title">Is the Pigeon Creek Lodge open?</h4>
