--- a/Contents/ServiceCenter/index.html
+++ b/Contents/ServiceCenter/index.html
@@ -24,24 +24,22 @@
 
 <body >
 
-<header >
+<header style="z-index: 2">
     <div class="logo">
         <img onclick="FC_ContentsCall('Home')" src="../../assets/logo.png">
     </div>
     <span class="col-sm-3 date-time" style="text-align: left; color: #3c3c3c">
-        <div id= 'appcity'>San Antonio, TX</div>
-          <div id="content_air">San Antonio, TX</div>
-          <div id="content_date" ></div>
-          <span id="condition"></span>
-        <div>
-            <img id ="image-zoom" style="width: 50px" src="">
-             <span id="temp" ></span>
-        </div>
-        
+      <div id="content_air"></div>
+      <div id="content_date" ></div>
+      <span id="temp" ></span>
+      <div>
+        <img id ="image-zoom" style="width: 50px" src="">
+        <span id="condition"></span>
+      </div>
     </span>
 </header>
 
-<nav>
+<nav style="z-index: 2">
     <span class="home-text" onclick="FC_ContentsCall('Home')"><img class="home" src="../../assets/icons/home.png" alt="home" >Home</span>
     
 </nav>
@@ -50,7 +48,7 @@
    <div class="bmg">
     <iframe style="    position: absolute;
     top: 100px;
-    z-index: -10000;" src="https://www.miottawa.org/OnlineServices/ServiceCenter.htm " width="1080" height="1350"></iframe>
+    z-index: 3;" src="https://www.miottawa.org/OnlineServices/ServiceCenter.htm " width="1080" height="1350"></iframe>
               <!--<div class="wrap" >
                <div class="col-sm-5">
                   <div class="part1" style="">
