--- a/Contents/ServiceCenter/index.html
+++ b/Contents/ServiceCenter/index.html
@@ -24,7 +24,7 @@
 
 <body >
 
-<header style="z-index: 2">
+<header style="z-index: 2;position: relative;">
     <div class="logo">
         <img onclick="FC_ContentsCall('Home')" src="../../assets/logo.png">
     </div>
@@ -39,7 +39,7 @@
     </span>
 </header>
 
-<nav style="z-index: 2">
+<nav style="z-index: 2; position: relative;">
     <span class="home-text" onclick="FC_ContentsCall('Home')"><img class="home" src="../../assets/icons/home.png" alt="home" >Home</span>
     
 </nav>
