Home screen Fixes

--- a/maincontents.htm
+++ b/maincontents.htm
@@ -45,7 +45,7 @@
 
     <div class="main-menu-matrix">
       <!--<img src="assets/Fiesta-logo.png" class="fiesta-icon" onclick="FC_ContentsCall('Fiesta')">-->
-      <div class="title" style="margin-bottom: 80px;"><img src="assets/icons/microphone.png" width="60" style="margin-right: 20px;">PRESS TO ASK A QUESTION</div>
+      <div class="title-home" style="margin-bottom: 90px;"><img src="assets/icons/microphone.png" width="60" style="margin-right: 20px;">PRESS TO ASK A QUESTION</div>
         <table>
             <tr>
                 <td>
