--- a/Contents/Departments/index.html
+++ b/Contents/Departments/index.html
@@ -29,15 +29,13 @@
         <img onclick="FC_ContentsCall('Home')" src="../../assets/logo.png">
     </div>
     <span class="col-sm-3 date-time" style="text-align: left; color: #3c3c3c">
-        <div id= 'appcity'>San Antonio, TX</div>
-          <div id="content_air">San Antonio, TX</div>
-          <div id="content_date" ></div>
-          <span id="condition"></span>
-        <div>
-            <img id ="image-zoom" style="width: 50px" src="">
-             <span id="temp" ></span>
-        </div>
-        
+      <div id="content_air"></div>
+      <div id="content_date" ></div>
+      <span id="temp" ></span>
+      <div>
+        <img id ="image-zoom" style="width: 50px" src="">
+        <span id="condition"></span>
+      </div>
     </span>
 </header>
 
