--- a/Contents/Departments/admin.html
+++ b/Contents/Departments/admin.html
@@ -23,7 +23,7 @@
 <body>
   <header >
     <div class="logo">
-        <img onclick="FC_ContentsCall('Home')" src="../../assets/logo.png">
+        <img onclick="window.history(-1);" src="../../assets/logo.png">
     </div>
     <span class="col-sm-3 date-time" style="text-align: left; color: #3c3c3c">
       <div id="content_air"></div>
@@ -41,73 +41,8 @@
   </nav>
 
   <section class="main-content">
-    <div class="bmg">
 
-      <div class="department-box" onclick="location.href='admin.html';">
-        <div class="department-title">Administrator's Office</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Board of Commissioners</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Corporate Counsel</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">County Clerk/Register's Office</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Emergency Management</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Equalization/Property Mapping</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Facilities/Maintanence</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Fiscal Services</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Human Resources</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">IT - Innovation and Technology</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Michigan State University (MSU) Extension</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Parks & Recreation</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Planning & Performance Improvement</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Sheriff's Office</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Treasurer's Office</div> 
-      </div>
-
-      <div class="department-box">
-        <div class="department-title">Water Resources Commissioner's Office</div> 
-      </div>
-    
-    </div>
+    <iframe src="https://www.miottawa.org/Departments/Admin/" width="1080" height="1600px"></iframe>
 
   </section>
 
