--- a/Contents/Info/index.html
+++ b/Contents/Info/index.html
@@ -43,13 +43,8 @@
     <span class="home-text" onclick="FC_ContentsCall('Home')"><img class="home" src="../../assets/icons/home.png" alt="home" >Home</span>
 </nav>
 
-<section class="main-content" style="/*height: 100%;
-    width: 100%;*/
-    overflow: hidden;height: 1615px;">
-  <div class="bmg" style="width: 100%;
-    overflow-y: scroll;
-    padding-right: 17px;
-    box-sizing: content-box;">
+<section class="main-content" style="overflow: hidden;height: 1615px;">
+  <div class="bmg" style="width: 100%;overflow-y: scroll;padding-right: 17px;box-sizing: content-box;">
     <div class="title"><img src="images/microphone.png" width="60" style="margin-right: 20px;">PRESS TO ASK A QUESTION</div>
 
     <div class="panel-group" id="faqAccordion" style="margin: 0 60px;">
