Department page fix

--- a/Contents/Departments/index.html
+++ b/Contents/Departments/index.html
@@ -135,7 +135,7 @@
 <script language="JavaScript" type="text/javascript" src="../Common/Scripts/common-inner.js"></script>
 
 <script language="javascript" type="text/javascript">
-    window.history.forward();
+    //window.history.forward();
 </script>
 
 
