--- a/Contents/Departments/admin.html
+++ b/Contents/Departments/admin.html
@@ -23,7 +23,7 @@
 <body>
   <header >
     <div class="logo">
-        <img onclick="window.history(-1);" src="../../assets/logo.png">
+        <img onclick="FC_ContentsCall('Home');" src="../../assets/logo.png">
     </div>
     <span class="col-sm-3 date-time" style="text-align: left; color: #3c3c3c">
       <div id="content_air"></div>
@@ -37,7 +37,7 @@
   </header>
 
   <nav>
-    <span class="home-text" onclick="FC_ContentsCall('Home')"><img class="home" src="../../assets/icons/home.png" alt="home" >Home</span> 
+    <span class="home-text" onclick="window.history.go(-1);"><img class="home" src="../../assets/icons/home.png" alt="home" >Home</span> 
   </nav>
 
   <section class="main-content">
@@ -70,7 +70,7 @@
 <script language="JavaScript" type="text/javascript" src="../Common/Scripts/common-inner.js"></script>
 
 <script language="javascript" type="text/javascript">
-    window.history.forward();
+   /// window.history.forward();
 </script>
 
 
