--- a/Contents/Departments/index.html
+++ b/Contents/Departments/index.html
@@ -47,7 +47,7 @@
         <div class="department-title">Administrator's Office</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='boc.html'">
         <div class="department-title">Board of Commissioners</div> 
       </div>
 
@@ -55,55 +55,55 @@
         <div class="department-title">Corporate Counsel</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='CountyClerk.html'">
         <div class="department-title">County Clerk/Register's Office</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='emergency.html'">
         <div class="department-title">Emergency Management</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='Equalization.html'">
         <div class="department-title">Equalization/Property Mapping</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box"  onclick="location.href='Facilities.html'">
         <div class="department-title">Facilities/Maintanence</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box"  onclick="location.href='FiscalServices.html'">
         <div class="department-title">Fiscal Services</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='HR.html'">
         <div class="department-title">Human Resources</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='IT.html'">
         <div class="department-title">IT - Innovation and Technology</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='MSU.html'">
         <div class="department-title">Michigan State University (MSU) Extension</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='Parks.html'">
         <div class="department-title">Parks & Recreation</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='Planning.html'">
         <div class="department-title">Planning & Performance Improvement</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='Sheriff.html'">
         <div class="department-title">Sheriff's Office</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='Treasurer.html'">
         <div class="department-title">Treasurer's Office</div> 
       </div>
 
-      <div class="department-box">
+      <div class="department-box" onclick="location.href='Drain.html'">
         <div class="department-title">Water Resources Commissioner's Office</div> 
       </div>
     
