--- a/Contents/Departments/Drain.html
+++ b/Contents/Departments/Drain.html
@@ -20,7 +20,7 @@
 
 
 </head>
-<body>
+<body  ondragstart="return false;" ondrop="return false;" style="-ms-user-select:none;" oncontextmenu="return false;">
   <header >
     <div class="logo">
         <img onclick="FC_ContentsCall('Home');" src="../../assets/logo.png">
@@ -43,7 +43,6 @@
   <section class="main-content">
 
     <iframe src="https://www.miottawa.org/Departments/Drain/" width="1080" height="1600px"></iframe>
-
   </section>
 
 
