--- a/Contents/Departments/index.html
+++ b/Contents/Departments/index.html
@@ -20,7 +20,7 @@
 
 
 </head>
-<body>
+<body ondragstart="return false;" ondrop="return false;" style="-ms-user-select:none;" oncontextmenu="return false;">
   <header >
     <div class="logo">
         <img onclick="FC_ContentsCall('Home')" src="../../assets/logo.png">
