--- a/Contents/ServiceCenter/index.html
+++ b/Contents/ServiceCenter/index.html
@@ -22,7 +22,7 @@
 </head>
 
 
-<body >
+<body ondragstart="return false;" ondrop="return false;" style="-ms-user-select:none;" oncontextmenu="return false;">
 
 <header style="z-index: 2;position: relative;">
     <div class="logo">
