--- a/maincontents.htm
+++ b/maincontents.htm
@@ -46,7 +46,10 @@
 
     <div class="main-menu-matrix">
       <!--<img src="assets/Fiesta-logo.png" class="fiesta-icon" onclick="FC_ContentsCall('Fiesta')">-->
-      <div class="title-home" style="margin-bottom: 90px;"><img src="assets/icons/microphone.png" width="60" style="margin-right: 20px;">PRESS TO ASK A QUESTION</div>
+      <div class="title-home" id = "txt-robot-talk" onclick="sendToServer()"   style="margin-bottom: 90px;">
+          <img src="assets/icons/microphone.png" width="60" style="margin-right: 20px;">
+          PRESS TO ASK A QUESTION
+      </div>
         <table>
             <tr>
                 <!--<td>
@@ -300,6 +303,54 @@ $(document).click(function(event) {
     tempTime=setTimeout(redirectToSS,240000);
 });*/
 </script>
+<script>
 
+    function sendToServer() {
+
+
+        dataKey = 1;
+        console.log("sending Key:" + dataKey);
+
+        $.ajax({
+            type: "GET",
+            data: { key: dataKey},
+            url: "/api/sendresponse"
+        });
+
+
+
+    }
+</script>
+
+
+<script>
+
+    setInterval(function(){
+        console.log("check");
+        $.getJSON("http://localhost:3000/api/getresponse", function(data) {
+
+            key = data["key"];
+            console.log(key);
+
+            if(key === "-1")
+            {
+                document.getElementById('txt-robot-talk').innerHTML = 'Listening';
+            }
+            else if (key === "-2")
+            {
+                document.getElementById('txt-robot-talk').innerHTML = 'Speaking';
+            }
+            else if (key !== "1" || key !== "0")
+            {
+                console.log(key);
+                PlaySpeech(key);
+                document.getElementById('txt-robot-talk').innerHTML = 'PRESS TO ASK A QUESTION';
+            }
+        });
+
+    }, 1000);
+
+
+</script>
 </body>
 </html>
