--- a/maincontents.htm
+++ b/maincontents.htm
@@ -341,7 +341,7 @@ $(document).click(function(event) {
             {
                 document.getElementById('txt-robot-talk').innerHTML = 'Speaking';
             }
-            else if (key2 !== "-3")
+            else if (key2 === "-3")
             {
                 data2 = 0;
                 console.log("sending Key:" + dataKey);
