LEX popup support added

--- a/maincontents.htm
+++ b/maincontents.htm
@@ -358,10 +358,54 @@ $(document).click(function(event) {
 								
                 console.log(key);
                 PlaySpeech(key);
-				if (key === "maps")
-				{
-					location.href = "Contents/Maps/index.html";
-				}
+                if (key === "maps")
+                {
+                    location.href = "http://localhost:3000/Contents/Maps/index.html";
+                }
+                else if (key === "The Parks and Recreation Office")
+                {
+                    ShowPopup("images/maps/O-Parks & Recreation.png");
+                }
+                else if ( key === "Fiscal Sevices")
+                {
+                    ShowPopup("images/maps/O-Fiscal Services Updated .png")
+                }
+                else if ( key === "Sheriff's Office")
+                {
+                    ShowPopup("images/maps/O-Sheriff.png")
+                }
+                else if ( key === "Treasurer's Office")
+                {
+                    ShowPopup("images/maps/O-County Treasurer.png")
+                }
+                else if ( key === "GIS")
+                {
+                    ShowPopup("images/maps/O-GIS.png")
+                }
+                else if ( key === "Clerk/Register of Deeds office")
+                {
+                    ShowPopup("images/maps/o-Register of Deeds.png")
+                }
+                else if ( key === "Visit the Clerk/Register of Deeds office")
+                {
+                    ShowPopup("images/maps/o-Register of Deeds.png")
+                }
+                else if ( key === "Human Resources" || key === "Visit miottawa.org/Departments/HR/ or stop by Human Resources" || key === "Stop by Human Resources to check in" || key === "Visit the Employee Portal or Human Resources" || key === "Visit Human Resources")
+                {
+                    ShowPopup("images/maps/O-Human Resources.png")
+                }
+                else if ( key === "Locations vary so check with the MSU Extension Office." || key === "Yes. Please go to MSU Extension." || key === "Yes, visit MSU Extension" || key === "Yes at the MSU Extension Office or through the MSU bookstore at bookstore.msue.msu.edu")
+                {
+                    ShowPopup("images/maps/O-MSU Extension.png")
+                }
+                else if ( key === "Water Resources Commissioner's Office")
+                {
+                    ShowPopup("images/maps/O-Water Resources Commissioner.png")
+                }
+                else if ( key === "Water Resources Commissioner's Office or miottawa.org/Departments/Drain")
+                {
+                    ShowPopup("images/maps/O-Water Resources Commissioner.png")
+                }
 
 				key = "";
 				
