--- a/Contents/Departments/index.html
+++ b/Contents/Departments/index.html
@@ -16,7 +16,7 @@
 
   <link href="../../css/Main.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="../../boots/css/bootstrap.min.css">
-  <link href="css/eat.css" rel="stylesheet" type="text/css" />
+  <link href="css/department.css" rel="stylesheet" type="text/css" />
 
 
 </head>
@@ -42,8 +42,71 @@
 
   <section class="main-content">
     <div class="bmg">
+      <div class="department-box" name="images/County-Administrator.png">
+        <div class="department-title">Administrator's Office</div> 
+      </div>
 
-      <div class="department-box" onclick="location.href='admin.html';">
+      <div class="department-box" name="images/O-Water-Resourcesp-Commissioner.png">
+        <div class="department-title">Board of Commissioners</div> 
+      </div>
+
+      <div class="department-box" name="images/O-Corporate-Counsel.png">
+        <div class="department-title">Corporate Counsel</div> 
+      </div>
+
+      <div class="department-box" name="images/o-Register-of-Deeds.png">
+        <div class="department-title">County Clerk/Register's Office</div> 
+      </div>
+
+      <div class="department-box" name="images/O-Emergency-Management.png">
+        <div class="department-title">Emergency Management</div> 
+      </div>
+
+      <div class="department-box" name="images/O-Equalization.png">
+        <div class="department-title">Equalization/Property Mapping</div> 
+      </div>
+
+      <div class="department-box"  name="images/O-Facilities-Maintenance.png">
+        <div class="department-title">Facilities/Maintanence</div> 
+      </div>
+
+      <div class="department-box"  name="images/O-Fiscal-Services-Updated.png">
+        <div class="department-title">Fiscal Services</div> 
+      </div>
+
+      <div class="department-box" name="images/O-Human-Resources.png">
+        <div class="department-title">Human Resources</div> 
+      </div>
+
+      <div class="department-box" name="images/O-IT.png">
+        <div class="department-title">IT - Innovation and Technology</div> 
+      </div>
+
+      <div class="department-box" name="images/O-MSU-Extension.png">
+        <div class="department-title">Michigan State University (MSU) Extension</div> 
+      </div>
+
+      <div class="department-box" name="images/O-Parks-&-Recreation.png">
+        <div class="department-title">Parks & Recreation</div> 
+      </div>
+
+      <div class="department-box" name="images/O-Planning-&-Performance-Improvement.png">
+        <div class="department-title">Planning & Performance Improvement</div> 
+      </div>
+
+      <div class="department-box" name="images/O-Sheriff.png">
+        <div class="department-title">Sheriff's Office</div> 
+      </div>
+
+      <div class="department-box" name="images/O-County-Treasurer.png">
+        <div class="department-title">Treasurer's Office</div> 
+      </div>
+
+      <div class="department-box" name="images/O-Water-Resourcesp-Commissioner.png">
+        <div class="department-title">Water Resources Commissioner's Office</div> 
+      </div>
+
+      <!--<div class="department-box" onclick="location.href='admin.html';">
         <div class="department-title">Administrator's Office</div> 
       </div>
 
@@ -105,7 +168,7 @@
 
       <div class="department-box" onclick="location.href='Drain.html'">
         <div class="department-title">Water Resources Commissioner's Office</div> 
-      </div>
+      </div>-->
     
     </div>
 
@@ -131,7 +194,7 @@
     }
 </script>
 
-<script language="JavaScript" type="text/javascript" src="js/eat.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/department.js"></script>
 <script language="JavaScript" type="text/javascript" src="../Common/Scripts/common-inner.js"></script>
 
 <script language="javascript" type="text/javascript">
